Añadi los elementos basicos de la pagina y cree el style de css

--- a/index.html
+++ b/index.html
@@ -9,13 +9,30 @@
     <header>
         <h2>Mi Web</h2>
         <nav>
-            <a href="">Inicio</a>
-            <a href="">Servicios</a>
-            <a href="">Nosotros</a>
-            <a href="">Contacto</a>
+            <a href="#">Inicio</a>
+            <a href="#">Servicios</a>
+            <a href="#">Nosotros</a>
+            <a href="#">Contacto</a>
         </nav>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+        <section class="hero">
+            <h1>Bienvenido a Nuestra Página</h1>
+        </section>
+        <section>        
+            <h2>Sobre Nosotros</h2>
+            <p>Somos una empresa enfocada en el desarrollo web moderno, accesible y funcional.</p>            
+        </section>
+        <section>
+            <h2>Servicios</h2>
+            <p>Ofrecemos diseño web, desarrollo full stack, asesorias técnicas y optimizacion SEO.</p>
+        </section>                     
+            <h2>Contacto</h2>
+            <p>Escribinos a contacto@miweb.com o encontranos en nuestras redes sociales.</p>
+        </section>
+    </main>
+    <footer>
+        <p>Mi Web, Todos los derechos reservados</p>
+    </footer>
 </body>
 </html>
