Agregue algunas modificaciones al css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h2>Mi Web</h2>
+        <h1>Mi Web</h1>
         <nav>
             <a href="#">Inicio</a>
             <a href="#">Servicios</a>
@@ -18,7 +18,7 @@
     </header>
     <main>
         <section class="hero">
-            <h1>Bienvenido a Nuestra Página</h1>
+            <h2>Bienvenido a Nuestra Página</h2>
         </section>
         <section>        
             <h2>Sobre Nosotros</h2>
@@ -27,7 +27,8 @@
         <section>
             <h2>Servicios</h2>
             <p>Ofrecemos diseño web, desarrollo full stack, asesorias técnicas y optimizacion SEO.</p>
-        </section>                     
+        </section>  
+        <section>                   
             <h2>Contacto</h2>
             <p>Escribinos a contacto@miweb.com o encontranos en nuestras redes sociales.</p>
         </section>
