Página hecha falta alinear etiquetas

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
         <section class="hero">
             <h2>Bienvenido a Nuestra Página</h2>
         </section>
-        <section>        
+        <section class="content">        
             <h2>Sobre Nosotros</h2>
             <p>Somos una empresa enfocada en el desarrollo web moderno, accesible y funcional.</p>            
         </section>
-        <section>
+        <section class="content">
             <h2>Servicios</h2>
             <p>Ofrecemos diseño web, desarrollo full stack, asesorias técnicas y optimizacion SEO.</p>
         </section>  
-        <section>                   
+        <section class="content">                   
             <h2>Contacto</h2>
             <p>Escribinos a contacto@miweb.com o encontranos en nuestras redes sociales.</p>
         </section>
